--- a/ReportPage.html
+++ b/ReportPage.html
@@ -924,6 +924,18 @@ The thing I learned about groups is the same as before.  Group dynamics.  At the
 		This group have worked together in a respectful and collaborative manner. We have had all team members at all meetings and most classes. Something I’ve really appreciated is the way group members have been willing to work around each other’s schedules. If there was a meeting scheduled and a team has had something came up in their private life meaning they could no longer make it, all the other team members worked to find another time appropriate for everyone. I’ve always felt like my voice was heard and my opinion was appreciated. It's been a really fun and empowering environment for me to work in as an introduction to the world of IT. It’s also been great getting the chance to work alongside team members that are reaching the end of an experience I have only recently begun. Being more familiar with each other this assignment as opposed to assignment 2 meant that we could really work off each other strengths. If there was something, we were struggling with we could access the other team members knowledge or go directly to a team member we knew could help in a particular area. I’ll be sad to say goodbye to my group once we’ve finished the presentation but hope to work with some of them on future group projects in other subjects. 
 	</p><br><br>
 	
+	<b>Individual - Nathan</b><br>
+	<p>Working with this group throughout this whole semester has been, quite frankly, brilliant. We’ve had none of the usual major issues that normally plagues university groups like disappearing group members, lack of communication, someone who doesn’t contribute evenly or any others. It has been smooth sailing for us with all our group members attending every meeting, clear and concise communication across the team about who is doing what, and best of all none of us have vanished into thin air.</p>
+	<p>I feel that we have worked extremely well together and have well and truly risen to the challenges of this course, as well as the challenges of studying from home due to COVID-19. There have certainly been challenges that we’ve had to tackle, but largely we have tackled them together come out on top. Our prototype has come out looking good, sure there are a few functions that are yet to be completed, but for a first-generation prototype it certainly lives up to our expectations. All in all, I have thoroughly enjoyed working in this group, we mesh well, and all have a variety of skills that enables us to complete a variety of tasks effectively and coherently.</p>
+	<br><br>
+	
+	<b>Individual - Dillon</b><br>
+	<p>I think Assignment 3 – Our IT project went extraordinarily well, everybody worked cohesively and were on time to meetings, there was times meetings were delayed, and in fact I had delayed one myself to better prepare for it, but our group clicked so well together that we were able to overcome to those obstacles and easily set new meetings.</p>
+	<p>I believe there was not much to improve, due to the current COVID-19 pandemic some processes could have been more easily completed, such as group meetings in person, even one or two would have helped with Team Cohesiveness and prepare us better for assignment work.</p>
+	<p>One thing that was surprising was how well everybody that most members were new to coding, and HTML in particular. Although our site turned out magnificent, there was a time I needed help with JavaScript and nobody knew what to do, but we worked as a team to work it out together in a meeting.</p>
+	<p>One thing I have learned about groups is that they can work access each other’s internal library to give a project a broader understanding and scope.</p>
+	<br><br>
+	
 	<b>What went well  </b>
 	<p>Communication between the group became more fluid this assessment meaning that our meetings became more productive. As we became more familiar with each other it allowed for us to have better discussions and all team members had the confidence to put ideas forward. We once again approached the assignment with a rough timeline of when we needed to have certain elements done. This allowed team members to work on certain things requiring more attention the necessary time while maintaining confidence that we would all be finished when necessary. The blend of experience in the team was again beneficial as team members had the opportunity to pick the parts of the assignment that worked off their personal strengths. Each member took their turn to chair a meeting, meaning this pressure was shared evenly amongst all group members. 
 </p><br>
@@ -934,6 +946,9 @@ Even though this happed, I learned that everyone has something positive to contr
 This was expressed when we took turns in reporting to the class or when we took turns in chairing one of our meetings.  Everyone has the ability to show leadership and to be prepared and to make a worthwhile contribution.  Even those who would normally be quieter.<br>
 This was partly because of a “good team vibe” that we had, as everyone in the group was patient and respecting.  If this is what professional teams in the IT industry are like, I would look forward to this as a career.<br>
 <br>
+	
+	<b>At least one thing that was suprising</b>
+	<p>One thing that was surprising was how well everybody that most members were new to coding, and HTML in particular. Although our site turned out magnificent, there was a time I needed help with JavaScript and nobody knew what to do, but we worked as a team to work it out together in a meeting.</p>
 	
 
 	
